--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
+    "antd": "^5.22.5",
     "chart.js": "^4.4.6",
     "lucide-react": "^0.447.0",
-    "next": "14.2.13",
+    "next": "^14.2.21",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
